feat(backend): enhance openapi
