# backend/crates/api/handler/src/health/implementation.rs
@@ -4,32 +4,18 @@ use utoipa::path as openapi;
 
 handler_implementation! {
     HealthHandler as Implemented {
+        /// API status check
         ///
-        ///
-        ///
+        /// Verify that API is running and ready to accept incoming requests.
         #[openapi(
             operation_id = "health",
             responses(
-                (status = 200, description = ""),
+                (status = 200, description = "API is running"),
             ),
         )]
         #[get("")]
         health() -> HttpResponse {
             HttpResponse::Ok().into()
-        }
-
-        ///
-        ///
-        ///
-        #[openapi(
-            operation_id = "ping",
-            responses(
-                (status = 200, description = ""),
-            ),
-        )]
-        #[get("/ping")]
-        ping() -> HttpResponse {
-            HttpResponse::NotImplemented().into()
         }
     }
 }
